[project]
name = "yastubo-python"
version = "0.1.0"
description = "GFA Emisiones — FastAPI monolith (Fase 2)"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",        # async MySQL driver
    "pymysql>=1.1.0",         # sync MySQL driver (scripts, Alembic)
    "alembic>=1.14.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",            # bcrypt ($2y$ parity)
    "python-multipart>=0.0.12",          # form data

    # Config / env
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # HTTP
    "httpx>=0.27.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "babel>=2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
